--- a/client/package.json
+++ b/client/package.json
@@ -30,5 +30,8 @@
     "typescript": "5.1.6",
     "wavesurfer.js": "^6.6.4",
     "zego-express-engine-webrtc": "^2.25.5"
+  },
+  "devDependencies": {
+    "@types/wavesurfer.js": "^6.0.6"
   }
 }
